squash more navigation bugs

--- a/css/style.scss
+++ b/css/style.scss
@@ -232,8 +232,9 @@ body {
 
 @media (min-width:976px) {
     .nav {
+        margin-left: 50px;
         position: fixed;
-        left: 50px;
+        left: 0;
         top: 50%;
         transform: translateY(-50%);
         z-index: 100;
@@ -247,13 +248,18 @@ body {
 }
 
 .nav__list > li:before {
+    opacity: 0;
     content: '';
     height: 2.2em;
     border-left: 1px solid currentColor;
     position: absolute;
     bottom: 1.5em;
     left: -1px;
-    transition: border .3s ease-in-out;
+    transition: border .3s ease-in-out, opacity 1s ease-out;
+}
+
+.nav.animation-complete .nav__list > li:before {
+    opacity: 1;
 }
 
 .nav__list > li:has(.previous):before,
@@ -275,11 +281,12 @@ body {
     color: #c4c4c4;
 }
 
-.nav__button.active:hover,
 .nav__button.active {
     color: #00E28A;
     background-color: #00E28A;
+}
 
+.nav__button:hover {
     span {
         text-decoration: underline;
     }
@@ -302,22 +309,20 @@ body {
     position: relative;
     padding: 1em 80px 1em 0;
     overflow: hidden;
-    color: currentColor;
+    color: var(--colors-black);
 }
 
 .faq__button-chevron {
     position: absolute;
-    top: 0;
+    top: 50%;
     bottom: 0;
     right: 20px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    transform: translateY(-50%);
-    transition: transform .3s ease-in-out;
 
-    svg:nth-child(1) {
-        transform: rotate(180deg);
+    svg {
+        transition: transform .3s ease-in-out;
     }
 }
 
@@ -328,11 +333,11 @@ body {
 
 .faq__list-content {
     overflow: hidden;
-    opacity: .6;
+    padding-right: 80px;
 }
 
-.faq__button.dropdown-active .faq__button-chevron {
-    transform: translateY(50%);
+.faq__button.dropdown-active svg {
+    transform: rotate(180deg);
 }
 
 .intro__logo {
@@ -382,11 +387,13 @@ body {
 
     .footer__links {
         display: grid;
-        grid-template-columns: repeat(3, auto);
         column-gap: 50px;
         position: static;
         transform: translateY(0);
         padding: 0;
+        margin-top: auto;
+        margin-bottom: auto;
+        grid-template-columns: repeat(2, auto);
     }
 }
 
@@ -395,8 +402,8 @@ body {
     text-decoration: none;
     display: flex;
     gap: 5px;
-    padding-top: 0.5em;
-    padding-bottom: 0.5em;
+    align-items: center;
+    padding: .5em 0;
 }
 
 footer:before {
@@ -520,7 +527,7 @@ footer:before {
 
 @media (min-width:976px) {
     .about__community-title {
-        margin-bottom: 3em;
+        margin-bottom: 2em;
         font-size: 2.1875rem;
     }
 }
@@ -613,10 +620,6 @@ footer {
     flex-basis: 50%;
     flex-grow: 1;
     flex-shrink: 1;
-}
-
-.europe-founder-graph__labels--bottom {
-    text-align: center;
 }
 
 .immigrant-founders h2 > div:first-child {
@@ -762,7 +765,8 @@ label {
 }
 
 @media (min-width:976px) {
-    .blog-posts__list {
+    .blog-posts__list,
+    .related {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         row-gap: 60px;
@@ -1095,6 +1099,11 @@ label {
     margin-bottom: 0;
 }
 
+.europe-founder-graph__labels--bottom {
+    max-width: 420px;
+    margin-left: auto;
+}
+
 .portfolio-items {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -1217,6 +1226,7 @@ label {
 
 .about__line-about {
     margin-inline: -20px;
+    pointer-events: none;
 }
 
 @media (min-width:976px) {
@@ -1256,10 +1266,10 @@ label {
     text-decoration: none;
 }
 
-@media (min-width:1239px) {
+@media (min-width:1024px) {
     .blog-post__back {
         position: absolute;
-        left: -7vw;
+        left: -100px;
         top: 15px;
     }
 }
@@ -1340,6 +1350,7 @@ label {
 
 .portfolio {
     background-color: var(--colors-black);
+    color: var(--colors-white);
 }
 
 .header.hide {
@@ -1367,14 +1378,6 @@ label {
 main {
     overflow: hidden;
     min-height: 100vh;
-}
-
-@media (min-width:976px) {
-    .blog-posts,
-    .blog-post {
-        margin-top: 250px;
-        position: relative;
-    }
 }
 
 .mouse-icon {
@@ -1515,6 +1518,22 @@ main {
     margin-top: 100px;
     padding-left: 20px;
     padding-right: 20px;
+    padding-bottom: 50px;
+}
+
+@media (min-width:976px) {
+    .blog-posts,
+    .blog-post {
+        margin-top: 150px;
+        padding-left: 0;
+        padding-right: 0;
+        position: relative;
+        max-width: 1020px;
+    }
+
+    .blog-post {
+        max-width: 720px;
+    }
 }
 
 .facts__section-services {
@@ -1560,7 +1579,7 @@ main {
         top: 0;
         left: 0;
         right: 0;
-        padding-top: 20vw;
+        padding-top: 25vh;
     }
 }
 
@@ -1586,6 +1605,12 @@ main {
 
 .portfolio__content h2 {
     color: var(--colors-white);
+}
+
+@media (min-width:976px) {
+    .portfolio__content h2 {
+        font-size: 2.1875rem;
+    }
 }
 
 .about-heading__name {
@@ -1663,6 +1688,7 @@ article p {
         left: 0;
         max-width: 362px;
         display: block;
+        pointer-events: none;
     }
 
     .related {
@@ -1690,6 +1716,10 @@ article p {
     vertical-align: middle;
 }
 
+.related__content {
+    margin-bottom: 1em;
+}
+
 .see-all-articles {
     display: block;
     text-align: center;
@@ -1702,7 +1732,7 @@ article p {
     color: var(--colors-black);
     font-family: $font-title;
     width: 209px;
-    margin: 1em auto 4em;
+    margin: 1em auto;
     font-size: 1.25rem;
 
     &:after {
@@ -1767,4 +1797,12 @@ form .error-message {
     display: none;
     border-radius: 5px;
     padding: 0.25em 0.5em;
+}
+
+.faq__list .faq__list-content p {
+    margin-top: .5em;
+}
+
+.faq__button:hover {
+    cursor: pointer;
 }
